# nanobp-examples

./: CMakeLists.txt  ExampleMessage.proto  README.md  compile_proto.bat
src/: CMakeLists.txt  decoder.cpp  encoder.cpp
src/auto_generated/: ExampleMessage.pb.c  ExampleMessage.pb.h
src/common/: CMakeLists.txt  utils.cpp  utils.h
src/decoder/: CMakeLists.txt  decoder.cpp
src/encoder/: CMakeLists.txt  encoder.cpp
src/nanopb/: README.md
