cmake_minimum_required(VERSION 3.10.0)

set(OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/build)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY         ${OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${OUTPUT_PATH})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY         ${OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   ${OUTPUT_PATH})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY         ${OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   ${OUTPUT_PATH})

add_subdirectory(src)