cmake_minimum_required(VERSION 3.10.0)

set(OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/build)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY         ${OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${OUTPUT_PATH})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY         ${OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   ${OUTPUT_PATH})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY         ${OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   ${OUTPUT_PATH})

set(NANOPB_PATH   ${CMAKE_CURRENT_LIST_DIR}/external/nanopb-0.4.4-windows-x86)
set(NANOPB_INCLUDE_PATH   ${NANOPB_PATH})
FILE (GLOB NANOPB_SOURCES ${NANOPB_PATH}/*.c)


set(COMPILE_PROTO_SCRIPT_PATH  ${CMAKE_CURRENT_LIST_DIR}/compile_proto.bat)

message("Generating NanoPB autogen files")

execute_process(COMMAND ${COMPILE_PROTO_SCRIPT_PATH} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(src)